fix: make header centered and contained on mobile

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,7 +7,8 @@
   position: fixed;
   background: mixTransparent($cl-background);
   top: 0;
-  width: 100%;
+  width: 100vw;
+  max-width: 1920px;
   z-index: $zHeader;
   box-shadow: $box-shadow;
   display: grid;
